# http-cli

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: build.yaml  build.yml
src/http_cli/: __init__.py
test/: conftest.py  http_cli_test.py  http_simple_cli_test.py  server.crt  server.key
