[project]
name = "http-cli"
description = "A simple helper to make HTTP requests using stdlib http.client"
readme = "README.md"
authors = [
    { name = "James Pickering", email = "james.pickering@airelogic.com" }
]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.scripts]
http-cli = "http_cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "cheroot>=11.1.2",
    "nox>=2026.7.11",
    "nox-uv>=0.8.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true
 